--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -90,3 +90,9 @@ body {
 .app-content-top-mobile {
   transform: translateX(0);
 }
+
+@media screen and (max-width: 410px) {
+  .app-content {
+    justify-content: center;
+  }
+}
